@@ -1,0 +1,2 @@
+I:  1: Ignoring entire file
+I:  1: Used deprecated directive "pylint:disable-all" or "pylint:disable=all"
